Fix gap between main menu items

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -9,6 +9,7 @@ header.page-header {
         #navbarNav {
             ul {
                 li {
+                    margin: 0 5px;
                     a {
                         color: $grayish_violet;
                         font: $bold 14px $font;
